k8s/remote/02.api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-api
  labels:
    app: note-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: note-api
  template:
    metadata:
      labels:
        app: note-api
    spec:
      containers:
        - name: notes-api
          image: 866389174338.dkr.ecr.eu-central-1.amazonaws.com/notes-registry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8022
          readinessProbe:
            httpGet:
              path: /health
              port: 8022
            initialDelaySeconds: 2
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 150Mi
              cpu: '0.2'
---
kind: Service
apiVersion: v1
metadata:
  name: note-api-service
spec:
  selector:
    app: note-api
  type: ClusterIP
  ports:
    - name: note-api-port
      port: 8023
      targetPort: 8022
