k8s/remote/03.api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-api
  labels:
    app: note-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: note-api
  template:
    metadata:
      labels:
        app: note-api
    spec:
      containers:
        - name: notes-api
          image: notes-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8022
          readinessProbe:
            httpGet:
              path: /health
              port: 8022
            initialDelaySeconds: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8022
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            limits:
              memory: 600Mi
              cpu: '0.5'
            requests:
              memory: 512Mi
              cpu: '0.2'
---
kind: Service
apiVersion: v1
metadata:
  name: note-api-service
spec:
  selector:
    app: note-api
  type: ClusterIP
  ports:
    - name: note-api-port
      port: 8023
      targetPort: 8022
---
# TODO: Still figuring out how to calculate pod resource params to better understand how HPA ties into horizontal scalling. Phewww
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: notes-api
#   namespace: default
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: notes-api
#   minReplicas: 5
#   maxReplicas: 20
#   targetCPUUtilizationPercentage: 50
