k8s/remote/database.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres-db
spec:
  selector:
    app: postgres-db
  type: ClusterIP
  ports:
    - port: 5432
      name: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  labels:
    app: postgres-db
spec:
  serviceName: 'postgres-service'
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
              name: postgresdb
          volumeMounts:
            - name: pv-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: pg-database-claim
