k8s/remote/04.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: notes-lb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:866389174338:certificate/edf68b77-01b3-4a73-8412-7bc240f74c32 # This is the arn of your enabled ACM SSL Cert
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  # Note that you don't need to set host as setting the certificate-arn will route all traffic to the domain therein
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: note-api-service
                port:
                  number: 8023
