k8s/remote/remote-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - notes.jesseinit.dev
      secretName: letsencrypt-production
  rules:
    - host: notes.jesseinit.dev
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: note-api-service
                port:
                  number: 8023
